# unionai-examples

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  TESTING.md  claude-test-guide.md  metatdata_parsing.py  pytest.ini  requirements.txt  run_commands.yaml  setup-flyte-env.sh
.github/: README.md  pull_request_template.md
.github/workflows/: register_and_run_wf.yml  reusable_flyte_wf.yml  run_examples.yml  test-and-deploy.yml  test-examples.yml  test-examples.yml.backup
_blogs/: MAINTAINERS.md
_blogs/mle-bot/: main.py  pyproject.toml
_blogs/mle-bot/mle_bot/: agent.py  environments.py  schemas.py  synthetic_data.py
_blogs/mle-bot/mle_bot/tools/: data.py  evaluation.py  exploration.py  predictions.py  resampling.py
_blogs/motherduck/: deck_wf.py  duckdb_artifacts.py  ecommerce_wf.py  plots.py  (+4 more)
artifacts/: basic.py  model_card.py  partition_keys_input.py  partition_keys_runtime.py  query.py  time_partition_input.py  time_partition_runtime.py  trigger_on_artifact.py
imagespec/: requirements.txt
templates/: README.md  user-guide-example.py
test/: README.md  README_PERSISTENT_RESULTS.md  config-template.yaml  config.flyte.local-build.yaml  config.github.json  config.json  create_secrets.sh  get_secrets.sh  test_runner.py
tests/: README.md  conftest.py  requirements-test.txt  test_runner.py  test_setup.py
tutorials/serving_langgraph_streamlit/: app.py  conv.py  pyproject.toml
v2/user-guide/project-patterns/monorepo-with-uv/01_workspace_monorepo/: pyproject.toml
v2/user-guide/project-patterns/monorepo-with-uv/01_workspace_monorepo/src/lib_models/: baseline.py
v2/user-guide/project-patterns/monorepo-with-uv/01_workspace_monorepo/src/lib_transforms/: ops.py
v2/user-guide/project-patterns/monorepo-with-uv/01_workspace_monorepo/src/workspace_app/: main.py
v2/user-guide/project-patterns/monorepo-with-uv/01_workspace_monorepo/src/workspace_app/tasks/: envs.py  etl_tasks.py  ml_tasks.py
v2/user-guide/project-patterns/monorepo-with-uv/02_sibling_packages/: pyproject.toml
v2/user-guide/project-patterns/monorepo-with-uv/02_sibling_packages/my_app/: pyproject.toml
v2/user-guide/project-patterns/monorepo-with-uv/02_sibling_packages/my_app/src/my_app/: env.py  main.py  tasks.py
v2/user-guide/project-patterns/monorepo-with-uv/02_sibling_packages/my_lib/: pyproject.toml
v2/user-guide/project-patterns/monorepo-with-uv/02_sibling_packages/my_lib/src/my_lib/: stats.py
v2/user-guide/task-deployment/deployment-patterns/pyproject_package/: README.md  pyproject.toml
v2/user-guide/task-deployment/deployment-patterns/pyproject_package/src/pyproject_package/: __init__.py  main.py  tasks.py
v2/user-guide/task-deployment/deployment-patterns/pyproject_package/src/pyproject_package/data/: __init__.py  loader.py  processor.py
v2/user-guide/task-deployment/deployment-patterns/pyproject_package/src/pyproject_package/models/: __init__.py  analyzer.py
v2/user-guide/task-deployment/deployment-patterns/pyproject_package/src/pyproject_package/tasks/: __init__.py  tasks.py
video-translation/: dev_requirements.txt
vscode/: requirements.txt
whisper/: Dockerfile  README.md  requirements.txt  requirements_pytorch.txt
(+1186 files in other folders)
